--- a/UTS DIKY/diky.css
+++ b/UTS DIKY/diky.css
@@ -232,6 +232,7 @@ body {
 @media screen and (max-width: 1340px) {
     #menu {
         display: inline-block;
+        overflow: hidden;
     }
 
     .navbar {
