--- a/UTS DIKY/diky.css
+++ b/UTS DIKY/diky.css
@@ -7,11 +7,9 @@
 
 body {
     background-image: url(https://wildnet.org/wp-content/uploads/2022/07/Great-Green-7-1024x683.jpg);
-    background-position: center;
+    background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
-    background-attachment: fixed;
 }
 
 /* Navbar Start */
@@ -244,21 +242,13 @@ body {
     transform: scale(80%);
     transition: all 0.5s ease-in-out;
 }
-
-
-
-
 /* Fooooter END*/
 /* SEEE YOUUUU */
 
 /* Responsive And JS */
-@media screen and (max-width: 1340px) {
+@media screen and (max-width: 1240px) {
     body {
-        background-image: url(https://wildnet.org/wp-content/uploads/2022/07/Great-Green-7-1024x683.jpg);
-        background-position: top;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
+        width: 100%;
     }
 
     #menu {
@@ -266,17 +256,16 @@ body {
     }
 
     .navbar {
-        padding: 15px 3%;
+        padding: 10px 2%;
     }
 
     .navbar-top {
-        position: absolute;
-        top: 12%;
-        right: -150%;
+        position: fixed;
+        top: 0;
+        right: -100%;
         background-color: greenyellow;
         width: 30rem;
         height: 100vh;
-        overflow: hidden;
     }
 
     .navbar .navbar-top.active {
@@ -316,6 +305,20 @@ body {
 
 /* handphone */
 @media screen and (max-width: 750px) {
+    body{
+        width: 100%;
+    }
+
+    .navbar-top {
+        position: fixed;
+        top: 0;
+        bottom: 10%;
+        right: -100%;
+        background-color: greenyellow;
+        width: 15rem;
+        height: 100vh;
+    }
+
     .tittle-tips {
         height: 20vh;
         width: 80%;
@@ -353,7 +356,5 @@ body {
         align-items: center;
         margin-top: 10px;
         font-size: 20px;
-        border: 1px solid red;
-        background-attachment: fixed;
     }
 }
